--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ahcamachod/python-para-datascience-primeros-pasos/blob/main/Python_Data_Science.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jjnassar/python-para-datascience-primeros-pasos/blob/main/Python_Data_Science.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -90,18 +90,134 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Hola Mundo!!!\")"
+      ],
       "metadata": {
-        "id": "0qZX8_ZQBYyk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0hFUftWeB996",
+        "outputId": "bc05961e-f6e1-4e4c-ff8d-168e92379877"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola Mundo!!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Soy JJ\")"
+      ],
+      "metadata": {
+        "id": "0qZX8_ZQBYyk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb571200-e7ca-4ba3-e20a-85d4e3f9ab53"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Soy JJ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Nombre: Juan\")\n",
+        "print(\"Apellido: Nassar\")\n",
+        "print(\"J\")\n",
+        "print(\"u\")\n",
+        "print(\"a\")\n",
+        "print(\"n\")\n"
+      ],
+      "metadata": {
+        "id": "GLMzF_AKBY7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9f81502-954e-4889-d0aa-a794103b8dfb"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre: Juan\n",
+            "Apellido: Nassar\n",
+            "J\n",
+            "u\n",
+            "a\n",
+            "n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Año Actual:\", 2025)"
+      ],
+      "metadata": {
+        "id": "y1kqlc8FG3DY",
+        "outputId": "421e44e7-66ae-487a-b545-f1f9e2e51847",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Año Actual: 2025\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Fecha de Nacimiento\", 4, \"julio\",1986)"
+      ],
+      "metadata": {
+        "id": "YdzspsTaHGpP",
+        "outputId": "48d8cff2-0edb-4209-8317-c7298f4ec0fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fecha de Nacimiento 4 julio 1986\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GLMzF_AKBY7a"
+        "id": "ync9IIPpIPPG"
       },
       "execution_count": null,
       "outputs": []
@@ -116,6 +232,15 @@
       "metadata": {
         "id": "iP8uWQmFYFRs"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mgw0URixIvEX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -141,27 +266,97 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "30"
+      ],
       "metadata": {
-        "id": "vsHh5buZADND"
+        "id": "vsHh5buZADND",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c29eab4-b101-4853-e035-b756f6971e6c"
       },
-      "execution_count": null,
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(30)"
+      ],
+      "metadata": {
+        "id": "sivPtqSjADQV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07f046bd-6fcb-42a4-8f3b-356630adb98c"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10751784"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edad = 30"
+      ],
+      "metadata": {
+        "id": "buhe3sOTI69-"
+      },
+      "execution_count": 35,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(id(edad))\n",
+        "print(id(30))"
+      ],
+      "metadata": {
+        "id": "JC8jO47wADlm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d802eff8-980a-48bf-a7c0-a2d95d41b45f"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10751784\n",
+            "10751784\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sivPtqSjADQV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JC8jO47wADlm"
+        "id": "DXEKlmQMJOfp"
       },
       "execution_count": null,
       "outputs": []
@@ -215,21 +410,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Este comentario de prueba para validar si funciona#\n",
+        "print(10) # Podemos colocar otro comentario en la lìnea despuès de un còdigo"
+      ],
       "metadata": {
-        "id": "J5a9t73A_-PX"
+        "id": "J5a9t73A_-PX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50574d00-82b5-430d-be31-d8cb3207dae1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\" Comentario para estos temas\n",
+        "para validar si funciona el comentar\n",
+        "con estos temas\"\"\""
+      ],
       "metadata": {
-        "id": "rqmO1ew-_-So"
+        "id": "rqmO1ew-_-So",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "c39fea88-8186-4fd0-f143-f7ed2b6a0795"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' Comentario para estos temas\\npara validar si funciona el comentar\\ncon estos temas'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -308,30 +541,156 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilante = 5\n",
+        "s_vigilante = 300\n",
+        "\n",
+        "c_docentes = 16\n",
+        "s_docente = 500\n",
+        "\n",
+        "c_coordinador = 2\n",
+        "s_coordinador = 600"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_empleados = c_vigilante + c_docentes + c_coordinador\n",
+        "total_empleados"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bfe4e59d-72f8-45c5-88a9-58fe6658b37e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia_salario = s_coordinador - s_vigilante\n",
+        "diferencia_salario"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13d1e554-d4fa-4deb-ceb7-3c2cbf57b232"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_salario = (c_vigilante* s_vigilante + c_docentes*s_docente + c_coordinador * s_coordinador) / total_empleados\n",
+        "promedio_salario"
+      ],
+      "metadata": {
+        "id": "1PIQDbO6c3GZ",
+        "outputId": "9ab87a6c-8c79-4c56-8a07-96e9f8a8cee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_salarios = s_vigilante + s_docente + s_coordinador\n",
+        "total_salarios"
+      ],
+      "metadata": {
+        "id": "NoiqGytAdbm9",
+        "outputId": "9ea4b988-a836-47e0-d634-ddd5b6ad9e2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1400"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_salario_empleado = total_salarios / total_empleados\n",
+        "promedio_salario_empleado"
+      ],
+      "metadata": {
+        "id": "zvwfvocXdu96",
+        "outputId": "fe79a955-d90a-4ab7-fd8c-1cdb7288ef0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "60.869565217391305"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "markdown",
